# nnx-lightning

./: .gitignore  README.md  pyproject.toml  test_pydlpack.py  train_model.py  try_pydlpack.py
