[project]
name = "nnx-lightning"
version = "0.1.0"
description = "Example of training a Flax NNX model with PyTorch data loaders and the Lightning trainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flax>=0.10.2",
  "lightning>=2.5.0.post0",
  "tensorboard>=2.18.0",
  "torch>=2.5.1",
  "torchvision>=0.2.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
